# copy-pasta

./: .gitignore  .pre-commit-config.yml  README.md  copier.yml  pyproject.toml
.github/workflows/: ci.yml
template/: .gitignore.jinja  .pre-commit-config.yml.jinja  README.md.jinja  pyproject.toml.jinja
template/.github/workflows/: ci.yml
template/src/: main.py.jinja
template/tests/: test_main.py.jinja
template/{{ name }}/: main.py.jinja
tests/: test_template.py
