[project]
name = "copy-pasta"
version = "0.1.0"
description = "Copier template for Python projects"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "copier",
]

[dependency-groups]
dev = [
    "j2lint",
    "pytest",
    "pytest-copie",
    "pytest-cov>=7.1.0",
    "ruff",
    "yamllint",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
